--- a/src/prod.html
+++ b/src/prod.html
@@ -19,10 +19,8 @@
 </head>
 <body>
 
-	<aside id="status"></aside>
-	
 	<aside id="menu" class="drawer" data-swipe-target="#appContainer" data-slide-in-dir="right" data-slide-out-dir="left" data-toggle-selector=".menuToggle, .menuItem">
-		<header>
+		<header class="drawer-title">
 			<span class="icon-cancel menuToggle toggle" title="close menu"></span>
 			<h1>Menu</h1>
 		</header>
@@ -35,18 +33,22 @@
 	</aside>
 	
 	<aside id="statistics" class="drawer" data-swipe-target="#appContainer" data-slide-in-dir="left" data-slide-out-dir="right" data-toggle-selector=".statisticsToggle">
-		<header>
+		<header class="drawer-title">
 			<span class="icon-cancel statisticsToggle toggle" title="close statistics"></span>
 			<h1>Statistics</h1>
 		</header>
-		<div class="card" id="gameSummaryContents">
-			<h2>Current Game</h2>
-			<section id="currentGameSummaryContents">No data available.</section>
-			<h2>Previous Game</h2>
-			<section id="previousGameSummaryContents">No data available.</section>
+		<div id="gameSummaryContents">
+			<section class="card">
+				<h2 class="card-title">Current Game</h2>
+				<div class="card-contents" id="currentGameSummaryContents">No data available.</div>
+			</section>
+			<section class="card">
+				<h2 class="card-title">Previous Games</h2>
+				<div class="card-contents" id="previousGameSummaryContents">No data available.</div>
+			</section>
 		</div>
 	</aside>
-
+	
 	<main id="appContainer" class="main">
 
 		<header id="appHeader" class="container">
@@ -56,27 +58,28 @@
 			</hgroup>
 		</header>
 
-		<article id="gameContainer">
+		<aside id="statusContainer">
+			<noscript>This application requires JavaScript</noscript>
+		</aside>
+		<article id="gameContainer" class="hide">
 		
-			<section id="maskedWords" class="container hide"></section>
+			<section id="maskedWords" class="container"></section>
 
-			<section id="turnActions" class="container hide">
+			<section id="turnActions" class="container">
 				<span id="wordAttempt"></span>
 				<a href="#" id="clearWordAttempt">clear</a>
 			</section>
 
 			<section id="letterContainer" class="container">
-				<div id="letterList" class="container">Preparing Game...</div>
+				<div id="letterList" class="container"></div>
 			</section>
 
-			<section id="turnSubmit" class="container hide">
+			<section id="turnSubmit" class="container">
 				<input type="button" id="submitWord" value="Submit Word" />
 			</section>
 
 		</article>
 		
-	</main>
-
 	</main>
 
 	<aside id="previousWordsWrapper"></aside>
