Move sort operation out of dictSearch and into gameBuilder
Add some sort tests. Prepare for ability to sort alphabetically
(controlled by config):
- Add sort by word length tests
- Add sortByLength and sortAlpha (latter unused) flags to config.js
- Move sortWordObjectsByLength from dictSearch to gameBuilder
- Add sortWords() to gameBuilder, which inspects config and acts
accordingly

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,10 +14,12 @@
   <!-- include source files here... -->
   <script src="src/config.js"></script>
   <script src="src/workers/gameBuilder_dictSearch.js"></script>
+  <script src="src/js/gameBuilder/gameBuilder.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/ConfigSpec.js"></script>
   <script src="spec/WordFinderSpec.js"></script>
+  <script src="spec/WordSorterSpec.js"></script>
 
 </head>
 
