Add some UI elements for settings (minWords, minWordLength)

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,16 @@
 				<li><a href="index.html" class="icon-chart-pie menuItem statisticsToggle" title="view statistics" id="statisticsToggle">Statistics</a></li>
 			</ul>
 		</nav>
+		<section id="settings">
+			<ul>
+				<li>
+					<label for="minWords">Minimum Words</label> <input id="minWords" type="range" value="5" min="1" max="25" step="1" />
+				</li>
+				<li>
+					<label for="minWordLength">Minimum Word Length</label> <input id="minWords" type="range" value="3" min="2" max="5" step="1" />
+				</li>
+			</ul>
+		</section>
 	</aside>
 	
 	<aside id="statistics" class="drawer" data-swipe-target="#appContainer" data-slide-in-dir="left" data-slide-out-dir="right" data-toggle-selector=".statisticsToggle">
