Simplify drawer behavior (at expense of background animation on drawer close)

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 
-	<aside id="menu" class="drawer" data-swipe-target="#appContainer" data-slide-in-dir="right" data-slide-out-dir="left" data-toggle-selector=".menuToggle, .menuItem">
+	<aside id="menu" class="drawer hidden" data-swipe-target="#appContainer" data-drawer-side="left" data-toggle-selector=".menuToggle, .menuItem">
 		<header class="drawer-title">
 			<span class="icon-cancel menuToggle toggle" title="close menu"></span>
 			<h1>Menu</h1>
@@ -46,7 +46,7 @@
 		</section>
 	</aside>
 	
-	<aside id="statistics" class="drawer" data-swipe-target="#appContainer" data-slide-in-dir="left" data-slide-out-dir="right" data-toggle-selector=".statisticsToggle">
+	<aside id="statistics" class="drawer hidden" data-swipe-target="#appContainer" data-drawer-side="right" data-toggle-selector=".statisticsToggle">
 		<header class="drawer-title">
 			<span class="icon-cancel statisticsToggle toggle" title="close statistics"></span>
 			<h1>Statistics</h1>
