--- a/src/prod.html
+++ b/src/prod.html
@@ -29,6 +29,16 @@
 				<li><a href="index.html" class="icon-chart-pie menuItem statisticsToggle" title="view statistics" id="statisticsToggle">Statistics</a></li>
 			</ul>
 		</nav>
+		<section id="settings">
+			<ul>
+				<li>
+					<label for="sortAlpha"><span>Sort Alphabetically</span> <small>Will take effect on next game</small></label> <input id="sortAlpha" type="checkbox" checked="" />
+				</li>
+				<li>
+					<label for="sortByLength"><span>Sort by Length</span> <small>Will take effect on next game</small></label> <input id="sortByLength" type="checkbox" checked="" />
+				</li>
+			</ul>
+		</section>
 	</aside>
 	
 	<aside id="statistics" class="drawer" data-swipe-target="#appContainer" data-drawer-side="right" data-toggle-selector=".statisticsToggle">
