Persist settings and add some pubsub console logging

--- a/src/index.html
+++ b/src/index.html
@@ -40,10 +40,10 @@
 			<div class="card-contents">
 				<ul>
 					<li>
-						<label for="sortAlpha"><span>Sort Alphabetically</span> <small>Will take effect on next game</small></label> <input id="sortAlpha" type="checkbox" checked="" />
+						<label for="sortAlpha"><span>Sort Alphabetically</span> <small>Changes will take effect on next game</small></label> <input id="sortAlpha" type="checkbox" checked="" />
 					</li>
 					<li>
-						<label for="sortByLength"><span>Sort by Length</span> <small>Will take effect on next game</small></label> <input id="sortByLength" type="checkbox" checked="" />
+						<label for="sortByLength"><span>Sort by Length</span> <small>Changes will take effect on next game</small></label> <input id="sortByLength" type="checkbox" checked="" />
 					</li>
 				</ul>
 			</div>
@@ -125,6 +125,7 @@
 
 	<script src="js/wordAttemptService.js" type="text/javascript"></script>
 	<script src="js/gameService.js" type="text/javascript"></script>
+	<script src="js/settingService.js" type="text/javascript"></script>
 	<script src="js/uiService.js" type="text/javascript"></script>
 	<script src="js/keyService.js" type="text/javascript"></script>
 
